# monkey_brain

./: .clang-tidy  .codespellrc  .gitignore  Dockerfile  README.md  demo.repos
monkey_brain/: package.xml  setup.cfg  setup.py
monkey_brain_basic_logger/: CMakeLists.txt  io_plugin.xml  package.xml
monkey_brain_basic_logger/src/: basic_logger_io_plugin.cpp
monkey_brain_basic_logger/src/basic_logger/include/monkey_brain_basic_logger/: basic_logger.hpp
monkey_brain_basic_logger/src/basic_logger/src/: basic_logger.cpp
monkey_brain_basic_logger/src/string_view_split/include/monkey_brain_basic_logger/: split.hpp
monkey_brain_basic_logger/test/: test_basic_logger.cpp  test_split.cpp
monkey_brain_core/: CMakeLists.txt  package.xml
monkey_brain_core/src/action/include/monkey_brain_core/: action.hpp
monkey_brain_core/src/action_builder/include/monkey_brain_core/: build_actions.hpp
monkey_brain_core/src/action_builder/src/: build_actions.cpp
monkey_brain_core/src/action_description/include/monkey_brain_core/: action_description.hpp
monkey_brain_core/src/action_parser/include/monkey_brain_core/: parse_action.hpp
monkey_brain_core/src/action_parser/src/: parse_action.cpp
monkey_brain_core/src/cli_context/include/monkey_brain_core/: cli_context.hpp
monkey_brain_core/src/cli_context/src/: cli_context.cpp
monkey_brain_core/src/context/include/monkey_brain_core/: context.hpp
monkey_brain_core/src/decision_engine/include/monkey_brain_core/: decision_engine.hpp
monkey_brain_core/src/environment/include/monkey_brain_core/: environment.hpp
monkey_brain_core/src/expression/include/monkey_brain_core/: condition.hpp  expression.hpp
monkey_brain_core/src/expression_builder/include/monkey_brain_core/: build_condition.hpp  build_expression.hpp
monkey_brain_core/src/expression_builder/src/: build_condition.cpp  build_expression.cpp
monkey_brain_core/src/expression_description/include/monkey_brain_core/: expression_description.hpp
monkey_brain_core/src/expression_parser/include/monkey_brain_core/: parse_expression.hpp
monkey_brain_core/src/expression_parser/src/: parse_expression.cpp
monkey_brain_core/src/io_plugin/include/monkey_brain_core/: event_recipient.hpp  io_plugin.hpp  io_plugin_factory.hpp  value_types.hpp
monkey_brain_core/src/io_plugin_registry/include/monkey_brain_core/: io_plugin_registry.hpp
monkey_brain_core/src/io_plugin_registry/src/: io_plugin_registry.cpp
monkey_brain_core/src/operations_factory_concrete/src/: concrete_operations_factory.cpp
monkey_brain_core/src/operator_registry/src/: operator_registry.cpp
monkey_brain_core/test/: test_action_parser.cpp  test_actions_builder.cpp  test_cli_context.cpp  test_expression_builder.cpp  test_expression_creation.cpp  test_expression_parser.cpp
monkey_brain_node/: .clang-tidy  .package.xml.swp  CMakeLists.txt  package.xml
monkey_brain_node/src/: main.cpp
monkey_brain_node/src/node/src/: monkey_brain_node.cpp
monkey_brain_node/src/plugins_loader/src/: plugins_loader.cpp
monkey_brain_node/src/plugins_parser/src/: plugins_parser.cpp
monkey_brain_node/tools/: monkey_tool.cpp  monkey_tool_complete.bash
monkey_brain_ros_utils/: CMakeLists.txt  package.xml
monkey_brain_ros_utils/include/monkey_brain_ros_utils/: simple_service_client.hpp
monkey_brain_ros_utils/src/ros_context/src/: ros_context.cpp
monkey_brain_scxml/: CMakeLists.txt  package.xml  sm_plugin.xml
monkey_brain_scxml/src/parse_scxml/src/: parse_scxml.cpp
monkey_brain_scxml/src/scxml_state_machine_factory/src/: scxml_state_machine_factory.cpp
monkey_brain_scxml/src/state_builder/src/: build_states.cpp
monkey_brain_scxml/src/state_machine/src/: state_machine.cpp
monkey_brain_scxml/src/state_machine_operators/src/: in_state_operator.cpp
monkey_brain_scxml/src/states/include/monkey_brain_scxml/: states.hpp
monkey_brain_scxml/src/validate_state_machine/src/: validate_state_machine.cpp
monkey_brain_scxml/test/: final.scxml  final_state_example.scxml  history_simple.scxml  initial_multiple_states.scxml  initial_tag.scxml  nested_states.scxml  no_initial.scxml  onentry_onexit.scxml  onentry_onexit_multiple.scxml  raise_elements.scxml  test_scxml_parser.cpp  test_statemachine.cpp  test_statemachine_integration.cpp  test_states_builder.cpp  test_validate_state_machine.cpp  wiki.scxml
monkey_brain_scxml/test/scxml-irp-test/: test144.scxml  test310.scxml  test355.scxml  test364.scxml  test372.scxml  test375.scxml  test387.scxml  test388.scxml  test403a.scxml  test403a.scxml_back  test403b.scxml  test403c.scxml  test404.scxml  test404.txml  test405.scxml  test406.scxml  test407.scxml  test412.scxml  test413.scxml  test416.scxml  test417.scxml  test419.scxml  test503.scxml  test504.scxml  test505.scxml  test506.scxml  test533.scxml  test570.scxml  test576.scxml  test579.scxml  test580.scxml  test_scxml_irp.cpp
monkey_brain_timer/: CMakeLists.txt  oneshot_timer_io_plugin.xml  package.xml  timer_io_plugin.xml
monkey_brain_timer/src/: oneshot_timer_io_plugin.cpp  timer_io_plugin.cpp
monkey_brain_yasmin_state_observer/: CMakeLists.txt  package.xml  sm_observer_plugin.xml
monkey_brain_yasmin_state_observer/include/monkey_brain_yasmin_state_observer/: yasmin_state_observer.hpp
monkey_brain_yasmin_state_observer/src/: yasmin_state_observer.cpp
monkey_brain_yasmin_state_observer/test/: test_yasmin_state_observer.cpp
rosidl_generator_monkey_brain/: CMakeLists.txt  package.xml  rosidl_generator_monkey_brain-extras.cmake.in  setup.cfg
rosidl_generator_monkey_brain/cmake/: register_monkey_brain.cmake  rosidl_generator_monkey_brain_generate_interfaces.cmake
rosidl_generator_monkey_brain/resource/: action_client.cpp.em  inout_plugin.xml.em  inoutputter.cpp.em  publisher.cpp.em  service_client.cpp.em  subscriber.cpp.em
rosidl_generator_monkey_brain/rosidl_generator_monkey_brain/: __init__.py  cli.py
veneer/: CMakeLists.txt  package.xml
veneer/src/veneer_stdout_logger/src/: veneer_stdout_logger.cpp
veneer_ros2/: CMakeLists.txt  package.xml
veneer_ros2/src/veneer_ros2_logger/src/: veneer_ros2_logger.cpp
(+56 files in other folders)
